Adding human GUI pandemic functionality
- still some actions to add
- player can click on the map to select nodes/decks/players (left click; any other button deselects all)
- player can click on card panels to select (right click deselects the specific card)
- player can click on player roles to select a player (right click deselects the specific player)
- action buttons displayed depending on player selection
- actions pressed executed in game