@@ -13,9 +13,8 @@ import static games.pandemic.PandemicConstants.nameHash;
 
 public class MovePlayer implements IAction {
 
-
-    private int playerIdx;
-    private String destination;
+    protected int playerIdx;
+    protected String destination;
 
     public MovePlayer(int playerIdx, String city) {
         this.playerIdx = playerIdx;
@@ -26,14 +25,6 @@ public class MovePlayer implements IAction {
     public boolean execute(AbstractGameState gs) {
         PandemicGameState pgs = (PandemicGameState) gs;
         PropertyString prop = (PropertyString) pgs.getComponent(PandemicConstants.playerCardHash, playerIdx).getProperty(PandemicConstants.playerLocationHash);
-        BoardNode currentCity = ((PandemicGameState)gs).world.getNode(nameHash, prop.value);
-        BoardNode destinationCity = ((PandemicGameState)gs).world.getNode(nameHash, destination);
-
-        // todo there are more ways to move the player, when this function is called the player should already know if the move is legal or not
-//        if (checkNeighbours(currentCity, destinationCity) || checkResearchStations(currentCity, destinationCity)) {
-//            removePlayer((PandemicGameState)gs, prop.value, playerIdx);
-//            placePlayer((PandemicGameState)gs, destination, playerIdx);
-//        }
         removePlayer((PandemicGameState)gs, prop.value, playerIdx);
         placePlayer((PandemicGameState)gs, destination, playerIdx);
 
@@ -52,33 +43,19 @@ public class MovePlayer implements IAction {
     public static void removePlayer(PandemicGameState gs, String city, int playerIdx) {
         BoardNode bn = gs.world.getNode(nameHash, city);
         PropertyIntArrayList prop = (PropertyIntArrayList) bn.getProperty(PandemicConstants.playersBNHash);
-        prop.getValues().remove(new Integer(playerIdx));
+        prop.getValues().remove(Integer.valueOf(playerIdx));
 
         Card playerCard = (Card) gs.getComponent(PandemicConstants.playerCardHash, playerIdx);
         playerCard.setProperty(PandemicConstants.playerLocationHash, new PropertyString(null));
-    }
-
-    boolean checkNeighbours(BoardNode city1, BoardNode city2) {
-        PropertyStringArray neighbours = (PropertyStringArray) city1.getProperty(PandemicConstants.neighboursHash);
-        PropertyString name = (PropertyString) city2.getProperty(nameHash);
-        for (String neighbour : neighbours.getValues()) {
-            if (name.value.equals(neighbour)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    boolean checkResearchStations(BoardNode city1, BoardNode city2) {
-        PropertyBoolean research1 = (PropertyBoolean) city1.getProperty(PandemicConstants.researchStationHash);
-        PropertyBoolean research2 = (PropertyBoolean) city2.getProperty(PandemicConstants.researchStationHash);
-        return research1.value && research2.value;
     }
 
     public String getDestination(){
         return destination;
     }
 
+    public int getPlayerIdx() {
+        return playerIdx;
+    }
 
     @Override
     public boolean equals(Object other)
@@ -90,5 +67,13 @@ public class MovePlayer implements IAction {
             return destination.equals(otherAction.destination) && playerIdx == otherAction.playerIdx;
 
         }else return false;
+    }
+
+    @Override
+    public String toString() {
+        return "MovePlayer{" +
+                "player=" + playerIdx +
+                ", destination='" + destination + '\'' +
+                '}';
     }
 }
